# ArgTyper

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
argtyper/: __init__.py  actions.py  base.py  exceptions.py
docs/: requirements.txt
docs/scripts/: config.py  run_examples.py
docs/source/: advanced_usage.rst  basic_usage.rst  conf.py  index.rst  module.rst  supported_types.rst
examples/: argument.py  argument_group.py  class_method.py  command.py  exclusive_group.py  extend_parser.py  parents.py  response.py  simple.py  subcommand.py  subparser.py  supported_types.py  type_custom_action.py  type_custom_arg.py  type_list.py  type_literal.py  type_tuple.py  wrap_external.py
