[tool.poetry]
name = "argtyper"
version = "0.1.0"
description = "Argparser on TypeHints and Decorators"
authors = ["Georg Merzdovnik"]
license = "MIT"

readme = "README.md"

homepage = "https://argtyper.readthedocs.io/"
repository = "https://github.com/gmerz/ArgTyper"


packages = [
    {include = "argtyper"},
]
include = ["argtyper/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
Sphinx = "^3.5.4"
myst-parser = "^0.13.6"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-programoutput = "^0.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
